# organizations_directory

./: .gitignore  README.md  pyproject.toml
conf/: .env.template  settings.py  urls.py
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
organizations_directory/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
organizations_directory/migrations/: 0001_initial.py
organizations_directory/tests/: data_factories.py  test_base.py  test_organization_viewset.py  test_product_viewset.py
organizations_directory/tests/test_data/: data_loader.py  products.yml
